<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.walts.ideas.activities.MainActivity">

    <item
        android:id="@+id/action_create_new_idea"
        android:title="@string/action_create_new_idea"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_sort_by_title"
        android:title="@string/action_sort_by_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_sort_by_created_date"
        android:title="@string/action_sort_by_created_date"
        app:showAsAction="never"
        />

</menu>
