<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.walts.ideas.activities.EditIdeaActivity">

    <item
        android:id="@+id/action_password_protect_idea"
        android:title="@string/action_password_protect_idea"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_delete_idea"
        android:title="@string/action_delete_idea"
        android:icon="@drawable/ic_action_discard"
        android:onClick="deleteIdea"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_save_idea"
        android:title="@string/action_save_idea"
        android:icon="@drawable/ic_action_save"
        android:onClick="saveIdea"
        app:showAsAction="ifRoom"
        />

</menu>