<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.walts.ideas.activities.ViewIdeaActivity">

    <item
        android:id="@+id/action_remove_location"
        android:title="@string/action_remove_location"
        android:icon="@drawable/ic_action_location_off"
        android:onClick="removeLocation"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_edit_idea"
        android:title="@string/action_edit_idea"
        android:icon="@drawable/ic_action_edit"
        android:onClick="editIdea"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_delete_idea"
        android:title="@string/action_delete_idea"
        android:icon="@drawable/ic_action_discard"
        android:onClick="deleteIdea"
        app:showAsAction="ifRoom"
        />

</menu>